--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@
 .logo {
     height: 200px;
     position:sticky;
+    /* transition: fadeIn .3s ease-in-out; */
 }
 
 
@@ -30,7 +31,7 @@
 
 body {
     text-align: center;
-    /* font-family: 'Halant', serif; */
+    /* font-family: 'Halant', serif;  */
     font-family: 'Noto Serif JP','Halant', serif;
 }
 
@@ -72,20 +73,19 @@ h4 {
     line-height: 1.5;
 } */
 
-li:hover, a:hover {
-    color: black;
+li:hover, a:hover, a:visited {
+    color: inherit;
 }
 
 
 li,a {
-    color: var(--main-color);
     text-decoration: none;
 }
 
 li {
     list-style: none;
     text-align: left;
-}
+} 
 
 
 /* Figure Out how to show/hide on hover. "none" = does the opposite of what i want */
@@ -93,10 +93,13 @@ li {
     display: hidden;
 } */
 
-.sub-nav_inner:hover{
-    visibility:hidden;
+.sub-nav_inner{
+
 }
 
+.sub-nav_inner:hover{
+
+}
 
 
 
@@ -106,62 +109,158 @@ li {
 
 /* Div Containers  */
 
-.joyeria {
-    text-decoration:underline;
-    color:var(--bold-color);
-}
 
-.top {
-    background-color: var(--box-color);
+.top-container {
+    background-color: rgb(210, 228, 223);
     position: relative;
+    padding: 100px 100px 0;
+}
+
+.middle-container{
+    background-color: rgb(238, 250, 247);
+    
+}
+
+div.profile{
     padding: 100px;
+
 }
 
-.middle {
-    background-color: var(--main-color);
+div.skill-row {
+    padding: 100px;
+
 }
 
-.bottom {
-    height: 200px;
-    width: 200px;
-    background-color: var(--sub-color);
+.bottom-container {
+    background-color: #c5ded7;
+    padding: 30px;
 }
 
 
-/* hr {
+
+
+.hr-home {
     border-color:var(--box-color);
     border-style: none;
     border-top-style: dotted;
-    border-width: 5px;
+    border-width: 10px;
     width: 10%;
-} */
+    display: inline-block;
+    text-align: center;
+    padding: 5px;
+}
 
-.home-t {
+.h1-home {
+    font-family: 'Sacramento', cursive;
+    font-size: 6rem;
+    color: #66BFBF;
+    margin:50px auto 0 auto;
+}
+
+.h2-home {
+    color: #66BFBF;
+    padding: 20px;
+}
+
+.h3-home {
+    color: #11999E;
     font-family: 'Merriweather', serif;
-    color: var(--bold-color);
+    padding:20px;
+    font-weight: normal;
+
 }
 
 
-.home-h {
-    font-family: 'Sacramento', cursive;
+
+.a-home, a.footer-link {
+    color: #11999E;
+    font-size: 1rem;
+    padding: 5px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.btn {
+    background-color: #45b29a;
+    color: white;
+    font-size: 2rem;
+    letter-spacing: 2px;
+    padding: 10px;
+    display: block;
+    
 }
 
 .home-p {
     font-family: 'Montserrat', sans-serif;
+    padding: 20px;
+    line-height:30px ;
+}
+
+.vegan {
+    color:rgb(162, 184, 164);
+    };
+}
+
+.li-home, .a-home:hover, .a-home:visited {
+    color: inherit;
 }
 
 /* Image Styles */
 
-
-
-.top-cloud {
+.sun {
     position:absolute;
-    right:300px;
+    right:50px;
     top:50px;
+    height: 20%;
 }
 
-.bottom-cloud {
+.rainbow {
     position:absolute;
-    left:300px;
-    bottom:300px;
+    left:50px;
+    bottom:350px;
+    height: 20%;
 }
+
+.avatar {
+    width: 20%;
+    padding: 50px;
+
+}
+
+#header-logo {
+    background-image: url(../images/logo.png);
+    background-size: 72px 72px;
+    position: absolute;
+    height: 72px;
+    width: 72px;
+    z-index: 1000;
+
+    border-radius: 60px;
+    border: solid;
+    overflow: hidden;
+    position: relative;
+    margin: 0;
+    padding: 0;
+}
+
+
+/* 
+#header-logo .behind {
+    background: #1c175e;
+    position: absolute;
+    height: 72px;
+    width: 72px;
+    z-index: 800;
+
+}#header-logo span {
+    display: block;
+} */
+
+::selection {
+    background: #e0ebe8;
+    color: #545454;
+    text-shadow: none;
+}
+
+
+
+
