--- a/css/home.css
+++ b/css/home.css
@@ -7,6 +7,7 @@
     --box-color:#e4e7ee;
 }
 
+
 /* * {
     margin:0; 
 } */
@@ -25,41 +26,72 @@
     transition: fadeIn .3s ease-in-out;
 } */
 
+*{
+    margin: 0;
+}
 
-body {
+body{
     text-align: center;
-    /* font-family: 'Halant', serif;  */
-    font-family: 'Noto Serif JP','Halant', serif;
+    font-family: 'Montserrat', sans-serif;
+    color: var(--sub-color);
+}
+
+.container{
+    height: 100px;
+    padding-left:30px;
+    padding-right:30px;
+    background-color: rgb(210, 228, 223);
+    display: block;
+}
+
+.left{
+    display: block;
+    float: left;
+    width: 35%;
+
+}
+.right{
+    display:block;
+    position: relative;
+    float: right;
+    width: 65%;
+}
+
+.nav-list-transition>li {
+    display: inline;
+    margin-left:0;
+}
+
+.nav-list-transition {
+    vertical-align: middle;
+    padding-top: 1.5em;
+    padding-left: 0;
+    padding-right:0 ;
+    position: relative;
+    float:right;
+    letter-spacing: 5px;
 }
 
 
+    /* HOVER ACTION */
 
-/* .cta:hover, .main-nav_link:hover,a:hover {
-    background: linear-gradient(90deg,#996f00,#bd9417);
-    -webkit-background-clip: text;
+.cta:hover, .main-nav_link:hover,a:hover {
+    background: linear-gradient(90deg,#065c62,rgb(89, 112, 60));
+    -webkit-background-clip:text;
     -webkit-text-fill-color: transparent;
     -webkit-box-decoration-break: clone;
     box-decoration-break: clone;
     text-shadow: none;
-} */
+}
 
 
 /* TF CODE */
 ol li, ul li, a {
     list-style: none;
     text-decoration: none;
+    color: #11999E;
 } 
- li:hover, ul:hover, a:hover,
- li:visited, ul:visited, a:visited
-  /* li:hover, a:hover, a:visited, li:visited */
-  {
-      background: linear-gradient(90deg,#996f00,#bd9417);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-box-decoration-break: clone;
-    box-decoration-break: clone;
-    text-shadow: none;
-}  
+
 
 
 
@@ -115,7 +147,26 @@ ol li, ul li, a {
 .top-container {
     background-color: rgb(210, 228, 223);
     position: relative;
-    padding: 100px 100px 0;
+
+}
+.h1-home{
+    margin: 0;
+}
+.top-container>h1>a{
+    color:#66bfbf; 
+}
+
+.hills {
+    width:100%;
+    margin-bottom: -20px;
+}
+
+
+
+div.profile {
+background-color:white;
+padding:10%;
+
 }
 
 /* .middle-container{
@@ -124,24 +175,31 @@ ol li, ul li, a {
 } */
 
 
-/* .bottom-container {
-    background-color: #c5ded7;
-    padding: 30px;/
-} */
+.bottom-container {
+    background-color: #66bfbf;
+    position: relative;
+   align-content: center;
+   padding: 35px;
+    height:100px ;
+    color:white;
+    font-family: 'Montserrat', sans-serif;
+    letter-spacing: 1px;
+    line-height: 2;
+}
 
+.skills {
+}
 
 .skill-row {
-    width: 50%;
-    margin: 100% auto 100% auto;
+    width: 80%;
+    margin: 50px auto 50px auto;
     text-align: left;
     line-height: 2;
 }
 
 /* Link Styles */
 
-.li-home, .a-home:hover, .a-home:visited {
-    color: inherit;
-}
+
 
 
 
@@ -159,23 +217,34 @@ ol li, ul li, a {
     padding: 5px;
 }
 
-.h1-home {
+.contact-me>h2{
+   font-size: 2rem;
+}
+
+h1 {
     font-family: 'Sacramento', cursive;
     font-size: 6rem;
     color: #66BFBF;
     margin:50px auto 0 auto;
 }
 
-.h2-home {
+h2 {
+    font-family: 'Montserrat', sans-serif;
     color: #66BFBF;
     padding: 20px;
+    font-size: 2rem;
 }
 
-.h3-home {
+h3 {
+    font-family: 'Montserrat', sans-serif;
     color: #11999E;
-    font-family: 'Merriweather', serif;
     padding:20px;
     font-weight: normal;
+    font-size: 1.5rem;
+}
+
+p{
+    font-family: 'Merriweather', serif;
 
 }
 
@@ -204,46 +273,68 @@ ol li, ul li, a {
     line-height:30px ;
 }
 
+
 .vegan {
     color:rgb(162, 184, 164);
-    };
 }
+
+
 
 
 /* Image Styles */
 
-.mountain {
-    vertical-align: middle;
-    position: static;
-}
+/* @media screen and (min-width: 700px) {
+    .hill {
+      width:300px;
+    }
+  } 
+*/
+
+
+
 
 .sun {
     position:absolute;
     right:50px;
     top:50px;
+    width: 15%;
 }
 
 .rainbow {
     position:absolute;
-    left:50px;
-    bottom:350px;
-    height: 20%;
+    left:2rem;
+    bottom:50%;
+    width: 15%;
 }
 
 .avatar {
-    width: 20%;
+    height:150px;
 
 }
 
-.chilli {
+.chili {
     width: 20%;
+    margin-left: 25px;
+    float:right;
+}
 
+
+.chili-text {
+    font-family: 'Montserrat', sans-serif;
+    color: var(--sub-color);
 }
 
 .tube {
-    width:80%;
-
+    width:20%;
+    float: left;
+    margin-right: 30px;
 }
+
+.tube-text {
+    font-family: 'Montserrat', sans-serif;
+    color: var(--sub-color);
+}
+
 
 }#header-logo span {
     display: block;
@@ -293,6 +384,45 @@ ol li, ul li, a {
  */
 
 
+ .button {
+     margin-bottom:20px ;
+        background: #38D4DA;
+        background-image: -webkit-linear-gradient(top, #38D4DA, #19B1B7);
+        background-image: -moz-linear-gradient(top, #38D4DA, #19B1B7);
+        background-image: -ms-linear-gradient(top, #38D4DA, #19B1B7);
+        background-image: -o-linear-gradient(top, #38D4DA, #19B1B7);
+        background-image: linear-gradient(to bottom, #38D4DA, #19B1B7);
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        border-radius: 35px;
+        color: #FFFFFF;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 20px;
+        font-weight: 100;
+        padding: 20px;
+        box-shadow: 1px 1px 5px 0px #000000;
+        -webkit-box-shadow: 1px 1px 5px 0px #000000;
+        -moz-box-shadow: 1px 1px 5px 0px #000000;
+        border: solid #337FED 1px;
+        text-decoration: none;
+        display: inline-block;
+        cursor: pointer;
+        text-align: center;
+    }
+    
+    .button:hover {
+        border: solid #45B29A 1px;
+        background: #17C7E2;
+        background-image: -webkit-linear-gradient(top, #17C7E2, #3DF6E8);
+        background-image: -moz-linear-gradient(top, #17C7E2, #3DF6E8);
+        background-image: -ms-linear-gradient(top, #17C7E2, #3DF6E8);
+        background-image: -o-linear-gradient(top, #17C7E2, #3DF6E8);
+        background-image: linear-gradient(to bottom, #17C7E2, #3DF6E8);
+        -webkit-border-radius: 35px;
+        -moz-border-radius: 35px;
+        border-radius: 35px;
+        text-decoration: none;
+    }
 
 
 
